--- a/build.gradle
+++ b/build.gradle
@@ -11,19 +11,19 @@ sourceSets {
 }
 
 dependencies {
-	compile( "io.vertx:vertx-core:5.0.0.CR5")
-	compile( "io.vertx:vertx-web:5.0.0.CR5")
-	compile( "io.netty.incubator:netty-incubator-codec-quic:0.0.20.Final")
-	compile( "io.netty.incubator:netty-incubator-codec-http3:0.0.28.Final")
+	implementation "io.vertx:vertx-core:5.0.0.CR5"
+	implementation "io.vertx:vertx-web:5.0.0.CR5"
+	implementation "io.netty.incubator:netty-incubator-codec-quic:0.0.20.Final"
+	implementation "io.netty.incubator:netty-incubator-codec-http3:0.0.28.Final"
 }
 
 configurations {
 	compile
 }
 
-compileJava.doFirst {
-	sourceSets.main.java.srcDirs = [ 'src/main/java' ]
-}
+// compileJava.doFirst {
+//	sourceSets.main.java.srcDirs = [ 'src/main/java' ]
+// }
 
 jar {
     manifest {
@@ -32,7 +32,7 @@ jar {
           'Main-Class' : 'examples.Http3ServerVerticle'
         )
     }
-    archiveName = "http3-test.jar"
+    archiveFileName = "http3-test.jar"
     from {
       configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
     }
