--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'java'
 
 repositories {
-
+  mavenLocal()
 	mavenCentral()
 
 }
@@ -15,7 +15,21 @@ dependencies {
 	implementation "io.vertx:vertx-web:5.0.0.CR5"
 	implementation "io.netty.incubator:netty-incubator-codec-quic:0.0.20.Final"
 	implementation "io.netty.incubator:netty-incubator-codec-http3:0.0.28.Final"
+	implementation "io.vertx:vertx-web-common:5.0.0.CR5"
+  implementation "io.vertx:vertx-web-client:5.0.0.CR5"
+  implementation "io.vertx:vertx-web-api-service:5.0.0.CR5"
+  implementation "io.netty:netty-common:4.1.118.Final"
+  implementation "io.netty:netty-buffer:4.1.118.Final"
+  implementation "io.netty:netty-codec:>4.1.118.Final"
+  implementation "io.netty:netty-codec-http:4.1.118.Final"
+  implementation "io.netty:netty-transport:4.1.118.Final"
+  implementation "io.netty.incubator:netty-incubator-codec-classes-quic:0.0.69.Final"
+  // implementation "io.netty.incubator:netty-incubator-codec-native-quic:0.0.69.Final"
+  implementation "org.jetbrains:annotations:24.1.0"
+  implementation "io.netty:netty-handler:4.1.118.Final"
+
 }
+
 
 configurations {
 	compile
@@ -29,7 +43,7 @@ jar {
     manifest {
         // 'Implementation-Version': version,
         attributes (
-          'Main-Class' : 'examples.Http3ServerVerticle'
+          'Main-Class' : 'examples.Http3ServerTest01'
         )
     }
     archiveFileName = "http3-test.jar"
