--- a/build.gradle
+++ b/build.gradle
@@ -27,9 +27,10 @@ dependencies {
   // implementation "io.netty.incubator:netty-incubator-codec-native-quic:0.0.69.Final"
   implementation "org.jetbrains:annotations:24.1.0"
   implementation "io.netty:netty-handler:4.1.118.Final"
-
+  implementation "io.netty:netty-all:4.1.118.Final"
+  implementation "io.projectreactor:reactor-core:3.4.24"
+  implementation "io.reactivex.rxjava2:rxjava:2.2.21"
 }
-
 
 configurations {
 	compile
