--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
   implementation "io.netty:netty-all:4.1.118.Final"
   implementation "io.projectreactor:reactor-core:3.4.24"
   implementation "io.reactivex.rxjava2:rxjava:2.2.21"
+  implementation "com.h2database:h2:2.3.232"
 }
 
 configurations {
