--- a/build.gradle
+++ b/build.gradle
@@ -10,14 +10,18 @@ sourceSets {
 }
 
 dependencies {
-// Bouncy castle in here
-implementation "io.vertx:vertx-core:5.0.0.CR5"
-// implementation "io.vertx:vertx-web:5.0.0.CR5"
+  // Bouncy castle in here
+  implementation "org.bouncycastle:bcutil-jdk18on:1.80"
+  implementation "org.bouncycastle:bcpkix-jdk18on:1.80"
+  implementation "org.bouncycastle:bctls-jdk18on:1.80"
+  implementation "org.bouncycastle:bcprov-jdk18on:1.80"
+  // implementation "io.vertx:vertx-core:5.0.0.CR5"
+  // implementation "io.vertx:vertx-web:5.0.0.CR5"
   implementation "io.netty.incubator:netty-incubator-codec-quic:0.0.20.Final"
   implementation "io.netty.incubator:netty-incubator-codec-http3:0.0.28.Final"
-//  implementation "io.vertx:vertx-web-common:5.0.0.CR5"
-//  implementation "io.vertx:vertx-web-client:5.0.0.CR5"
-//  implementation "io.vertx:vertx-web-api-service:5.0.0.CR5"
+  //  implementation "io.vertx:vertx-web-common:5.0.0.CR5"
+  //  implementation "io.vertx:vertx-web-client:5.0.0.CR5"
+  //  implementation "io.vertx:vertx-web-api-service:5.0.0.CR5"
   implementation "io.netty:netty-common:4.1.118.Final"
   implementation "io.netty:netty-buffer:4.1.118.Final"
   implementation "io.netty:netty-codec:4.1.118.Final"
@@ -28,11 +32,16 @@ implementation "io.vertx:vertx-core:5.0.0.CR5"
   // implementation "org.jetbrains:annotations:24.1.0"
   implementation "io.netty:netty-handler:4.1.118.Final"
   implementation "io.netty:netty-all:4.1.118.Final"
-  // implementation "io.projectreactor:reactor-core:3.4.24"
+  implementation "io.projectreactor:reactor-core:3.7.3"
+  implementation group: 'io.projectreactor.netty.incubator', name: 'reactor-netty-incubator-quic', version: '0.2.3'
+  implementation group: 'io.projectreactor.netty', name: 'reactor-netty-core', version: '1.2.3'
+  implementation group: 'io.projectreactor.netty', name: 'reactor-netty', version: '1.2.3'
+  implementation group: 'io.projectreactor.netty', name: 'reactor-netty-http', version: '1.2.3'
   // implementation "io.reactivex.rxjava2:rxjava:2.2.21"
   implementation "com.h2database:h2:2.3.232"
-  // implementation "com.fasterxml.jackson.core:jackson-databind:2.18.3"
-  // implementation "com.fasterxml.jackson.core:jackson-core:2.18.3"
+  implementation "com.fasterxml.jackson.core:jackson-databind:2.18.3"
+  implementation "com.fasterxml.jackson.core:jackson-core:2.18.3"
+  implementation "com.fasterxml.jackson.core:jackson-annotations:2.18.3"
 }
 
 configurations {
