--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ sourceSets {
 }
 
 dependencies {
-  // Bouncy castle in here
+  // Bouncy castle in here can't include in fat jar since signed
 //  implementation "org.bouncycastle:bcutil-jdk18on:1.80"
 //  implementation "org.bouncycastle:bcpkix-jdk18on:1.80"
 //  implementation "org.bouncycastle:bctls-jdk18on:1.80"
@@ -64,8 +64,21 @@ jar {
     }
     archiveFileName = "http3-test.jar"
     duplicatesStrategy = "exclude"
+    exclude("META-INF/*.RSA", "META-INF/*.SF", "META-INF/*.DSA")
+    // exclude 'META-INF/*.RSA', 'META-INF/*.SF', 'META-INF/*.DSA'
+//    from {
+//      (configurations.runtime).collect {
+//        it.isDirectory() ? it : zipTree(it)
+//      }
+//    } {
+//      exclude 'META-INF/*.RSA', 'META-INF/*.SF', 'META-INF/*.DSA'
+//    }
     from {
       // configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-      configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+      (configurations.runtimeClasspath).collect {
+        it.isDirectory() ? it : zipTree(it)
+      }
+      // { exclude = 'META-INF/*.RSA' }
+
     }
 }
