--- a/build.gradle
+++ b/build.gradle
@@ -11,10 +11,10 @@ sourceSets {
 
 dependencies {
   // Bouncy castle in here can't include in fat jar since signed
-//  implementation "org.bouncycastle:bcutil-jdk18on:1.80"
-//  implementation "org.bouncycastle:bcpkix-jdk18on:1.80"
-//  implementation "org.bouncycastle:bctls-jdk18on:1.80"
-//  implementation "org.bouncycastle:bcprov-jdk18on:1.80"
+  implementation "org.bouncycastle:bcutil-jdk18on:1.80"
+  implementation "org.bouncycastle:bcpkix-jdk18on:1.80"
+  implementation "org.bouncycastle:bctls-jdk18on:1.80"
+  implementation "org.bouncycastle:bcprov-jdk18on:1.80"
   // implementation "io.vertx:vertx-core:5.0.0.CR5"
   // implementation "io.vertx:vertx-web:5.0.0.CR5"
   implementation "io.netty.incubator:netty-incubator-codec-quic:0.0.20.Final"
