--- a/build.gradle
+++ b/build.gradle
@@ -64,7 +64,7 @@ jar {
     }
     archiveFileName = "http3-test.jar"
     duplicatesStrategy = "exclude"
-    exclude("META-INF/*.RSA", "META-INF/*.SF", "META-INF/*.DSA")
+//    exclude("META-INF/*.RSA", "META-INF/*.SF", "META-INF/*.DSA")
     // exclude 'META-INF/*.RSA', 'META-INF/*.SF', 'META-INF/*.DSA'
 //    from {
 //      (configurations.runtime).collect {
