--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ dependencies {
   // implementation "io.netty.incubator:netty-incubator-codec-native-quic:0.0.69.Final"
   // implementation "org.jetbrains:annotations:24.1.0"
   // implementation "io.netty:netty-handler:4.1.118.Final"
-  // implementation "io.netty:netty-all:4.1.118.Final"
+  implementation "io.netty:netty-all:4.1.118.Final"
   // implementation group: 'io.projectreactor', name: 'reactor-core', version: '3.7.3'
   implementation group: 'io.projectreactor.netty.incubator', name: 'reactor-netty-incubator-quic', version: '0.2.3'
   implementation group: 'io.projectreactor.netty', name: 'reactor-netty-core', version: '1.2.3'
